# shell

./: .gitignore  CMakeLists.txt  README.md  shell.qml
components/: CategoryNavbar.qml  TabNavbar.qml
components/controls/: Menu.qml  StyledBareInputField.qml  VolumeSlider.qml
config/: BackgroundConfig.qml  BarConfig.qml  BatteryConfig.qml  Config.qml  GeneralConfig.qml  LauncherConfig.qml  LockConfig.qml  ServiceConfig.qml  UtilitiesConfig.qml
decoder-service/: CMakeLists.txt
decoder-service/src/: control_socket.cpp  control_socket.hpp  decoder.cpp  decoder.hpp  main.cpp  shared_memory.cpp  shared_memory.hpp
modules/: BatteryMonitor.qml  IdleMonitors.qml  Shortcuts.qml
modules/areapicker/: AreaPicker.qml  Picker.qml
modules/background/: Background.qml  VideoWallpaperDecoder.qml  Visualiser.qml  Wallpaper.qml
modules/bar/: Bar.qml  BarWrapper.qml
modules/controlcenter/: PaneRegistry.qml  Panes.qml  Session.qml
modules/dashboard/: .Media.qml.kate-swp  CalendarDeleteModal.qml  CalendarEventModal.qml  Content.qml  LyricMenu.qml  LyricsView.qml  Media.qml  Mixer.qml  MixerEntry.qml  Tabs.qml  Wrapper.qml
modules/drawers/: Backgrounds.qml  Border.qml  ContentWindow.qml  Drawers.qml  Exclusions.qml  Interactions.qml  Panels.qml
modules/fullscreen/: Overlay.qml
modules/launcher/: AppList.qml  (+9 more)
services/: BatteryNotifier.qml  Brightness.qml  CalendarEvents.qml  DecoderService.qml  Drift.qml  Hypr.qml  LauncherIpc.qml  LauncherWrappers.qml  LyricsService.qml  Notifs.qml  Players.qml  Sunset.qml  VPN.qml  Visibilities.qml  Wallpapers.qml
utils/: Paths.qml
(+91 files in other folders)
